--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         
         <main>
             <Section class="banner">
-                <h1 class="heading">Calamba Legacy</h1>
-                <h2 class="sub-heading">The Development of Cultural Heritage Mapping for Calamba City Laguna</h2>
-                <button class="explore-btn">Explore Now &#x2192;</button>
+                <div class="headings">
+                    <h1 class="heading">Calamba Legacy</h1>
+                    <h2 class="sub-heading">The Development of Cultural Heritage Mapping for Calamba City Laguna</h2>
+                    <button class="explore-btn">Explore Now &#x2192;</button>
+                </div>
             </Section>
         </main>
 
