--- a/index.html
+++ b/index.html
@@ -37,6 +37,55 @@
                     <button class="explore-btn">Explore Now &#x2192;</button>
                 </div>
             </Section>
+
+            <section class="intro-cont">
+                <h1 class="intro-header">Welcome to Calamba Legacy!</h1>
+                <p class="intro">
+                    Embark on a captivating journey through Calamba's rich heritage as we delve 
+                    into the city's vibrant folklore, cherished traditions, mouthwatering delicacies, 
+                    and awe-inspiring historical sites. Discover the soul of Calamba and immerse yourself 
+                    in the stories, tastes, and sights that define this culturally rich region. Join us as we 
+                    celebrate Calamba's enduring legacy and share the beauty of its past and present with the world.
+                </p>
+            </section>
+
+            <section class="mission-cont">
+                <div class="left">
+                    <img src="Assets/Images/Home/kesong-puti.jpg" alt="Kesong Puti" class="side-img">
+                    <img src="Assets/Images/Home/banga.jpg" alt="Banga" class="side-img-1">
+                </div>
+                <div class="right">
+                    <h1 class="mission-header">Mission</h1>
+                    <p class="mission">
+                        Our mission is to share Calamba's stories with the world, highlighting its unique 
+                        traditions, flavors, and historical wonders. We aim to inspire a deeper 
+                        appreciation for Calamba's culture and heritage in everyone.
+                    </p>
+                </div>
+            </section>
+            <section class="vision-cont">
+                <div class="left">
+                    <h1 class="vision-header">Vision</h1>
+                    <p class="vision">
+                        Our vision is to be the trusted source for learning about Calamba's past and present, 
+                        fostering a love for its culture and encouraging the preservation of its legacy for future generations.
+                    </p>
+                </div>
+                <div class="right">
+                    <img src="Assets/Images/Home/simbahan.jpg" alt="Simbahan" class="side-img">
+                    <img src="Assets/Images/Home/buhayani.jpg" alt="Buhayani" class="side-img-2">
+                </div>
+            </section>
+
+            <section class="features-cont">
+                <h1 class="features-header">FEATURES</h1>
+                <div class="features">
+                    <div class="folklore feature"><p>Folklore</p></div>
+                    <div class="traditionfestival feature"><p>Tradition & Festival</p></div>
+                    <div class="delicacies feature"><p>Delicacies</p></div>
+                    <div class="historicalsites feature"><p>Historical Sites</p></div>
+                </div>
+            </section>
         </main>
 
         <footer>
@@ -56,8 +105,8 @@
                 </div>
                 <div class="box">
                     <h4>Contact us</h4>
-                    <a href="#"><i class="fas fa-phone"></i> +639271760712</a>
-                    <a href="#"><i class="fas fa-phone"></i> +639271760712</a>
+                    <a href="#"><i class="fas fa-phone"></i> +639123456789</a>
+                    <a href="#"><i class="fas fa-phone"></i> +639987654321</a>
                     <a href="#"><i class="fas fa-envelope"></i> calambalegacy@gmail.com</a>
                 </div>
                 <div class="box">
