--- a/Assets/Pages/Explore/Delicacies.html
+++ b/Assets/Pages/Explore/Delicacies.html
@@ -2,24 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="../Images/Icon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../../Images/Icon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Explore | Calamba Legacy</title>
+        <title>Delicacies | Calamba Legacy</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-        <link rel="stylesheet" href="../Styles/style.css">
-        <link rel="stylesheet" href="../Styles/header.css">
-        <link rel="stylesheet" href="../Styles/footer.css">
+        <link rel="stylesheet" href="../../Styles/style.css">
+        <link rel="stylesheet" href="../../Styles/header.css">
+        <link rel="stylesheet" href="../../Styles/footer.css">
     </head>
     <body>
         <header>
-            <a href="../../index.html" class="logo"><img src="../Images/Logo.png" alt="LagunaLegacy Logo"></a>
-            <a href="../../index.html" class="title">Calamba Legacy</a>
+            <a href="../../../index.html" class="logo"><img src="../../Images/Logo.png" alt="LagunaLegacy Logo"></a>
+            <a href="../../../index.html" class="title">Calamba Legacy</a>
             <nav>
                 <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li><a href="Explore.html">Explore</a></li>
-                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="../../../index.html">Home</a></li>
+                    <li><a href="../Explore.html">Explore</a></li>
+                    <li><a href="../AboutUs.html">About Us</a></li>
                 </ul>
                 <div class="hamburger-menu">
                     <span class="bar"></span>
@@ -35,16 +35,16 @@
             <div class="box-container">
                 <div class="box">
                     <h4>Quick Links</h4>
-                    <a href="../../index.html"><i class="fas fa-angle-right"></i> Home</a>
-                    <a href="Explore.html"><i class="fas fa-angle-right"></i> Explore</a>
-                    <a href="AboutUs.html"><i class="fas fa-angle-right"></i> About Us</a>
+                    <a href="../../../index.html"><i class="fas fa-angle-right"></i> Home</a>
+                    <a href="../Explore.html"><i class="fas fa-angle-right"></i> Explore</a>
+                    <a href="../AboutUs.html"><i class="fas fa-angle-right"></i> About Us</a>
                 </div>
                 <div class="box">
                     <h4>Extra Links</h4>
-                    <a href="Explore/Folklore.html"><i class="fas fa-angle-right"></i> Folklore</a>
-                    <a href="Explore/TraditionFestival.html"><i class="fas fa-angle-right"></i> Tradition & Festival</a>
-                    <a href="Explore/Delicacies.html"><i class="fas fa-angle-right"></i> Delicacies</a>
-                    <a href="Explore/HistoricalSites.html"><i class="fas fa-angle-right"></i> Historical Sites</a>
+                    <a href="Folklore.html"><i class="fas fa-angle-right"></i> Folklore</a>
+                    <a href="TraditionFestival.html"><i class="fas fa-angle-right"></i> Tradition & Festival</a>
+                    <a href="Delicacies.html"><i class="fas fa-angle-right"></i> Delicacies</a>
+                    <a href="HistoricalSites.html"><i class="fas fa-angle-right"></i> Historical Sites</a>
                 </div>
                 <div class="box">
                     <h4>Contact us</h4>
@@ -62,5 +62,6 @@
             </div>
         </footer>
     </body>
-    <script src="../JS/header.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="../../JS/header.js"></script>
 </html>
