--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="headings">
                     <h1 class="heading">Calamba Legacy</h1>
                     <h2 class="sub-heading">The Development of Cultural Heritage Mapping for Calamba City Laguna</h2>
-                    <button class="explore-btn">Explore Now &#x2192;</button>
+                    <button class="explore-btn"><a href="Assets/Pages/Explore.html">Explore Now &#x2192;</a></button>
                 </div>
             </Section>
 
@@ -80,10 +80,10 @@
             <section class="features-cont">
                 <h1 class="features-header">FEATURES</h1>
                 <div class="features">
-                    <div class="folklore feature"><p>Folklore</p></div>
-                    <div class="traditionfestival feature"><p>Tradition & Festival</p></div>
-                    <div class="delicacies feature"><p>Delicacies</p></div>
-                    <div class="historicalsites feature"><p>Historical Sites</p></div>
+                    <div class="folklore feature"><a href="Assets/Pages/Explore/Folklore.html">Folklore</a></div>
+                    <div class="traditionfestival feature"><a href="Assets/Pages/Explore/TraditionFestival.html">Tradition & Festival</a></div>
+                    <div class="delicacies feature"><a href="Assets/Pages/Explore/Delicacies.html">Delicacies</a></div>
+                    <div class="historicalsites feature"><a href="Assets/Pages/Explore/HistoricalSites.html">Historical Sites</a></div>
                 </div>
             </section>
         </main>
@@ -98,10 +98,10 @@
                 </div>
                 <div class="box">
                     <h4>Extra Links</h4>
-                    <a href="Assets/Pages/Folklore.html"><i class="fas fa-angle-right"></i> Folklore</a>
-                    <a href="Assets/Pages/TraditionFestival.html"><i class="fas fa-angle-right"></i> Tradition & Festival</a>
-                    <a href="Assets/Pages/Delicacies.html"><i class="fas fa-angle-right"></i> Delicacies</a>
-                    <a href="Assets/Pages/HistoricalSites.html"><i class="fas fa-angle-right"></i> Historical Sites</a>
+                    <a href="Assets/Pages/Explore/Folklore.html"><i class="fas fa-angle-right"></i> Folklore</a>
+                    <a href="Assets/Pages/Explore/TraditionFestival.html"><i class="fas fa-angle-right"></i> Tradition & Festival</a>
+                    <a href="Assets/Pages/Explore/Delicacies.html"><i class="fas fa-angle-right"></i> Delicacies</a>
+                    <a href="Assets/Pages/Explore/HistoricalSites.html"><i class="fas fa-angle-right"></i> Historical Sites</a>
                 </div>
                 <div class="box">
                     <h4>Contact us</h4>
