--- a/Assets/Pages/AboutUs.html
+++ b/Assets/Pages/AboutUs.html
@@ -7,7 +7,7 @@
         <title>About Us | Calamba Legacy</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-        <link rel="stylesheet" href="../Styles/style.css">
+        <link rel="stylesheet" href="../Styles/about.css">
         <link rel="stylesheet" href="../Styles/header.css">
         <link rel="stylesheet" href="../Styles/footer.css">
     </head>
@@ -29,7 +29,47 @@
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <section class="aboutus">
+                <h1 class="about-header">ABOUT US</h1>
+                <hr>
+                <p class="about">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    tempor incididunt ut labore et dolore magna aliqua. Egestas diam in arcu cursus 
+                    euismod quis viverra. Nunc lobortis mattis aliquam faucibus purus in massa tempor. 
+                    Amet consectetur adipiscing elit duis tristique sollicitudin. Tortor at auctor 
+                    urna nunc id. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. 
+                    Euismod in pellentesque massa placerat. Elementum pulvinar etiam non quam lacus 
+                    suspendisse faucibus. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo. 
+                    Tellus molestie nunc non blandit massa enim nec dui.
+                </p>
+            </section>
+
+            <section class="team">
+                <div class="members-cont">
+                    <div class="member">
+                        <img src="../Images/Members/RA.jpg" alt="Requirements Analyst" class="profile">
+                        <p class="name">Kyla Mae Rubio</p>
+                        <p class="role"><i>Requirements Analyst</i></p>
+                    </div>
+                    <div class="member">
+                        <img src="../Images/Members/SD.jpg" alt="System Designer" class="profile">
+                        <p class="name">Alyssa Balolo</p>
+                        <p class="role"><i>System Designer</i></p>
+                    </div>
+                    <div class="member">
+                        <img src="../Images/Members/Programmer.jpg" alt="Programmer" class="profile">
+                        <p class="name">Joriz Ama</p>
+                        <p class="role"><i>Programmer</i></p>
+                    </div>
+                    <div class="member">
+                        <img src="../Images/Members/Tester.jpg" alt="Tester" class="profile">
+                        <p class="name">Railey Dela Pena</p>
+                        <p class="role"><i>Tester/Leader</i></p>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <footer>
             <div class="box-container">
