--- a/Assets/Pages/Explore.html
+++ b/Assets/Pages/Explore.html
@@ -7,7 +7,7 @@
         <title>Explore | Calamba Legacy</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-        <link rel="stylesheet" href="../Styles/style.css">
+        <link rel="stylesheet" href="../Styles/explore.css">
         <link rel="stylesheet" href="../Styles/header.css">
         <link rel="stylesheet" href="../Styles/footer.css">
     </head>
@@ -29,7 +29,12 @@
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <a href="Explore/Folklore.html" class="container folklore"><p>Folklore</p></a>
+            <a href="Explore/TraditionFestival.html" class="container traditionfestival"><p>Tradition & Festival</p></a>
+            <a href="Explore/Delicacies.html" class="container delicacies"><p>Delicacies</p></a>
+            <a href="Explore/HistoricalSites.html" class="container historicalsites"><p>Historical Sites</p></a>
+        </main>
 
         <footer>
             <div class="box-container">
