--- a/Assets/Pages/Explore/Delicacies.html
+++ b/Assets/Pages/Explore/Delicacies.html
@@ -7,7 +7,7 @@
         <title>Delicacies | Calamba Legacy</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-        <link rel="stylesheet" href="../../Styles/style.css">
+        <link rel="stylesheet" href="../../Styles/delicacies.css">
         <link rel="stylesheet" href="../../Styles/header.css">
         <link rel="stylesheet" href="../../Styles/footer.css">
     </head>
@@ -29,7 +29,11 @@
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <div>
+                <p>This Page is Under Maintenance</p>
+            </div>
+        </main>
 
         <footer>
             <div class="box-container">
