--- a/Assets/Pages/AboutUs.html
+++ b/Assets/Pages/AboutUs.html
@@ -14,12 +14,11 @@
     <body>
         <header>
             <a href="../../index.html" class="logo"><img src="../Images/Logo.png" alt="LagunaLegacy Logo"></a>
-            <a href="../../index.html" class="title">Calamba Legacy</a>
             <nav>
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
                     <li><a href="Explore.html">Explore</a></li>
-                    <li><a href="AboutUs.html">About Us</a></li>
+                    <li><a href="AboutUs.html" class="active">About Us</a></li>
                 </ul>
                 <div class="hamburger-menu">
                     <span class="bar"></span>
