--- a/Assets/Pages/Explore/Folklore.html
+++ b/Assets/Pages/Explore/Folklore.html
@@ -29,9 +29,92 @@
         </header>
 
         <main>
-            <div>
-                <p>This Page is Under Maintenance</p>
-            </div>
+            <section class="head-section">
+                <h1>FOLKLORE</h1>
+                <p>
+                    Folklore is a collection of fictional animal and human stories, as well as cultural myths, jokes, songs, 
+                    tales, and even quotes. It is a description of culture that has been passed down orally from generation to generation, 
+                    though many are now written down. Folklore is often known as "folk literature," or "oral traditions."
+                </p>
+            </section>
+            
+            <section class="categories">
+                <a href="#CalambaLegend" class="category-btn">Calamba Legend</a>
+                <a href="#PansolLegend" class="category-btn">Pansol Legend</a>
+                <a href="#UrbanLegend" class="category-btn">Urban Legend</a>
+            </section>
+
+            <section class="container">
+                <div class="main-storyboard">
+                    <div class="story-cont">
+                        <img src="../../Images/Explore/AlamatngCalamba.jpg" alt="Legend of Calamba" class="story-img" id="CalambaLegend">
+                        <h1>Legend of Calamba</h1>
+                        <p>
+                            The "Banga" has long been a symbol of Calamba. It is based on an oral tradition in which two Spanish soldiers ask native women 
+                            about the town's name. The women, who could not understand Spanish, assumed they were asking about the clay pots they were selling and responded, 
+                            "Kalan? Banga?"
+                            <br><br>
+                            This mythology, like many others in Laguna, depicts how "Calamba" arose from a misunderstanding between Spaniards and locals. 
+                            Calamba was formed by combining the words "kalan" and "banga". However, there is a problem: a "Kalan" is a burner, whereas a "Banga" is a huge 
+                            jar that is not used to cook. Filipinos refer to the "Banga" as a vessel that holds water, grains, or palm sap.
+                            <br><br>
+                            Some people have noticed the mismatch and now use "Clay Pot" instead of "Banga" in publications. This makes more sense given the town's icon, a massive 
+                            building resembling a pot in the historic Calamba Plaza. It was created by sculptor Felipe Samaniego in 1939 and is unofficially regarded as the world's 
+                            largest pot. However, it deviates from the legend's true meaning of "Banga".
+                            <br><br>
+                            Should we reconsider the discrepancy? Should we focus more on Calamba's history, arts, and culture? Is it time to alter the legend? 
+                            Some people may be resistant to changing long-held beliefs, but is it right to continue to believe something incorrect? Isn't it worse to modify an 
+                            eighty-year-old masterpiece to match a modern cityscape?
+                        </p>
+                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                    </div>
+
+                    <div class="story-cont">
+                        <img src="../../Images/Explore/AlamatngPansol.jpg" alt="Legend of Calamba" class="story-img" id="PansolLegend">
+                        <h1>Legend of Pansol</h1>
+                        <p>
+                            Pansol is one of the barangays in the City of Calamba. From the very beginning, Pansol has been well-known. It has been a tourist destination 
+                            since the time of the Spanish and even during the American era. Pansol became famous because of its natural hot springs.
+                            <br><br>
+                            The name Pansol comes from an early contraption or device made of bamboo or any tube inserted into a platform or side of a hill to channel 
+                            water from a spring. Because of the many natural hot springs in this area of Calamba, it became customary to call it Pansol.
+                            <br><br>
+                            The creative minds of our ancestors eventually turned this into a story that later became a legend about the customary name Pansol. 
+                            Nowadays, many people have forgotten the true meaning of the word "Pansol," and the legend is believed by many, especially the youth.
+                            <br><br>
+                            That's how culture evolves. It's like a mud ball rolling down the street of time, picking up whatever it encounters. 
+                            Listen to the stories of Pikoy about the legend of Pansol, which connects to the name of our hero, Dr. Jose Rizal, who hails from Calamba.
+                        </p>
+                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Pansol,+Calamba,+4027+Laguna/@14.1762206,121.1730162,15.26z/data=!4m6!3m5!1s0x33bd614fc0e251fd:0xc276539e1b0cfbd4!8m2!3d14.1783983!4d121.1840497!16s%2Fg%2F11b6wk3qny?entry=ttu" target="_blank">Pansol Calamba City, Laguna</a></p>
+                    </div>
+
+                    <div class="story-cont">
+                        <img src="../../Images/Explore/rizal-hitler.png" alt="Legend of Calamba" class="story-img" id="UrbanLegend">
+                        <h1>Urban Legend: Jose Rizal is the father of Adolf Hitler</h1>
+                        <p>
+                            In simple terms, some made-up stories claim that Dr. Jose P. Rizal, a hero from the Philippines, was involved in strange events. 
+                            One story says he was the father of Adolf Hitler, the leader of Nazi Germany, and another says he was a serial killer in London.
+                            <br><br>
+                            The first story says Rizal had a romantic relationship with Klara Pölzl, an Austrian woman, around the time Hitler was supposedly conceived. 
+                            They say Rizal lost a valuable pin in Austria, which some believe was a sign of his connection to Hitler's birth. 
+                            But this story doesn't make sense because Hitler was born after Rizal had already left Austria for London.
+                            <br><br>
+                            The second story suggests that Klara married a man named Alois Hitler, and Hitler took his stepfather's last name. 
+                            But again, this doesn't match up with the dates, as Rizal wasn't in Austria when Hitler was born.
+                            <br><br>
+                            Overall, these stories are ridiculous and don't make sense. They lack supporting proof and are riddled with discrepancies.
+                        </p>
+                        <p><i class="fas fa-location"></i> Orignated in: <a href="https://www.google.com/maps/place/Calamba,+4027+Laguna/@14.188341,121.0338296,12z/data=!3m1!4b1!4m6!3m5!1s0x33bd63655ce077d3:0x39dd1f59c6edaced!8m2!3d14.1869747!4d121.1247233!16zL20vMDJjNXNy?entry=ttu" target="_blank">Calamba City, Laguna</a></p>
+                    </div>
+                </div>
+                <div class="side-panel">
+                    <div class="content-wrapper">
+                        <a href="#CalambaLegend" class="story calamba"><p>Legend of Calamba</p></a>
+                        <a href="#PansolLegend" class="story pansol"><p>Legend of Pansol</p></a>
+                        <a href="#UrbanLegend" class="story urbanLegend"><p>Urban Legend</p></a>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
