--- a/Assets/Pages/Explore/Delicacies.html
+++ b/Assets/Pages/Explore/Delicacies.html
@@ -29,9 +29,36 @@
         </header>
 
         <main>
-            <div>
-                <p>This Page is Under Maintenance</p>
-            </div>
+            <section class="head-section">
+                <h1>Delicacies</h1>
+                <p>
+                    Delicacies typically refer to rare, luxurious, or exquisite foods that are considered especially pleasing or refined. 
+                    These can include dishes made from unique ingredients, prepared with exceptional skill, or embodying cultural significance, 
+                    often reserved for special occasions or esteemed gatherings. Delicacies are often prized for their flavors, textures, 
+                    and the experience they offer to those who indulge in them.
+                </p>
+            </section>
+
+            <section class="categories">
+                <p>Contents:</p>
+                <div class="category-btn-cont">
+                    <a href="#" class="category-btn"></a>
+                    <a href="#" class="category-btn"></a>
+                    <a href="#" class="category-btn"></a>
+                </div>
+            </section>
+
+            <section class="container">
+                <div class="mainboard">
+                    <div class="content-cont"></div>
+                </div>
+                <div class="side-panel">
+                    <div class="content-wrapper">
+                        <p>Contents:</p>
+                        <div class="content-cont"></div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
