--- a/Assets/Pages/Explore/Folklore.html
+++ b/Assets/Pages/Explore/Folklore.html
@@ -39,9 +39,12 @@
             </section>
             
             <section class="categories">
-                <a href="#CalambaLegend" class="category-btn">Calamba Legend</a>
-                <a href="#PansolLegend" class="category-btn">Pansol Legend</a>
-                <a href="#UrbanLegend" class="category-btn">Urban Legend</a>
+                <p>Contents:</p>
+                <div class="category-btn-cont">
+                    <a href="#CalambaLegend" class="category-btn">Calamba Legend</a>
+                    <a href="#PansolLegend" class="category-btn">Pansol Legend</a>
+                    <a href="#UrbanLegend" class="category-btn">Urban Legend</a>
+                </div>
             </section>
 
             <section class="container">
@@ -109,9 +112,12 @@
                 </div>
                 <div class="side-panel">
                     <div class="content-wrapper">
-                        <a href="#CalambaLegend" class="story calamba"><p>Legend of Calamba</p></a>
-                        <a href="#PansolLegend" class="story pansol"><p>Legend of Pansol</p></a>
-                        <a href="#UrbanLegend" class="story urbanLegend"><p>Urban Legend</p></a>
+                        <p>Contents:</p>
+                        <div class="content-cont">
+                            <a href="#CalambaLegend" class="story calamba"><p>Legend of Calamba</p></a>
+                            <a href="#PansolLegend" class="story pansol"><p>Legend of Pansol</p></a>
+                            <a href="#UrbanLegend" class="story urbanLegend"><p>Urban Legend</p></a>
+                        </div>
                     </div>
                 </div>
             </section>
