--- a/Assets/Pages/Explore/HistoricalSites.html
+++ b/Assets/Pages/Explore/HistoricalSites.html
@@ -29,9 +29,26 @@
         </header>
 
         <main>
-            <div>
-                <p>This Page is Under Maintenance</p>
-            </div>
+            <section class="head-section">
+                <h1></h1>
+                <p></p>
+            </section>
+
+            <section class="categories">
+                <p>Contents:</p>
+                <div class="category-btn-cont">
+                    <a href="#" class="category-btn"></a>
+                    <a href="#" class="category-btn"></a>
+                    <a href="#" class="category-btn"></a>
+                </div>
+            </section>
+
+            <section class="container">
+                <div class="mainboard">
+                    <div class="content-cont"></div>
+                </div>
+                <div class="side-panel"></div>
+            </section>
         </main>
 
         <footer>
