--- a/Assets/Pages/Explore/TraditionFestival.html
+++ b/Assets/Pages/Explore/TraditionFestival.html
@@ -29,9 +29,80 @@
         </header>
 
         <main>
-            <div>
-                <p>This Page is Under Maintenance</p>
-            </div>
+            <section class="head-section">
+                <h1>Tradition & Festival</h1>
+                <p>
+                    Tradition embodies the timeless customs, beliefs, and practices passed down through generations, serving as a cultural compass 
+                    guiding societal rituals and values. It weaves the fabric of identity, fostering a sense of belonging and continuity within 
+                    communities. Festivals, vibrant expressions of tradition, are celebratory manifestations that honor heritage, mark significant 
+                    occasions, and unify people through shared experiences of joy, reflection, and camaraderie.
+                </p>
+            </section>
+
+            <section class="categories">
+                <p>Contents:</p>
+                <div class="category-btn-cont">
+                    <a href="#Buhayani" class="category-btn">Buhayani Festival</a>
+                    <a href="#Menajak" class="category-btn">Menajak Festival</a>
+                    <a href="#PatronSaintIsidore" class="category-btn">Patron Saint Isidore</a>
+                </div>
+            </section>
+
+            <section class="container">
+                <div class="mainboard">
+                    <div class="content-div" id="Buhayani">
+                        <img src="../../Images/Explore/buhayani.jpeg" alt="" class="content-img">
+                        <h1>Buhayani Festival</h1>
+                        <p>
+                            The Buhayani Festival in Calamba, Laguna, isn't just about fun parades and shows. It's a special event that helps 
+                            people remember the history of the Philippines.
+                            <br><br>
+                            A long time ago, before the Philippines was taken over by other countries, the folks in Calamba 
+                            celebrated their local heroes with big ceremonies. Even when the Spanish ruled the Philippines, they kept up 
+                            these traditions, but they also started honoring bigger national heroes like José Rizal and Andres Bonifacio.
+                            <br><br>
+                            After the Americans took over and the Philippines became independent, the festival changed again. It became more about 
+                            bringing people together, even if they were different, and it helped keep old traditions alive.
+                            <br><br>
+                            Today, the Buhayani Festival is all about celebrating the Philippines' past. It remembers the old ceremonies, 
+                            the fight against being taken over, and the rise of important heroes. It's not just about having fun; it's a way 
+                            to honor the brave people who fought for freedom. The festival started long ago in Calamba and continues to remind 
+                            people of their country's journey.
+                            <br><br>
+                            Back in the beginning, the festival started on June 12, which is the Philippines' Independence Day, 
+                            and ended on June 19. But in 2023, it was celebrated from June 2 to June 25. That same year, they also started 
+                            giving out the Calambagong Bayani Awards to recognize people who have done amazing things in different areas.
+                        </p>
+                    </div>
+                    <div class="content-div" id="PatronSaintIsidore">
+                        <img src="../../Images/Explore/SanIsidroLabradorFeast.jpg" alt="" class="content-img">
+                        <h1>Feast of Patron Saint Isidore/San Isidro Labrador</h1>
+                        <p>
+                            Religious activities are an integral part of Calamba&#39;s festivals and events, including the 
+                            Feast of Patron Saint Isidore, also known as San Isidro Labrador, the city&#39;s patron saint. 
+                            This celebration gathers the Catholic community of Calamba in fervent devotion to Saint Isidore, 
+                            the patron saint of farmers and laborers, marked by religious processions, novena masses, and a grand fiesta 
+                            at the Calamba Cathedral. These activities foster a strong sense of community and offer space for spiritual 
+                            reflection and renewal.
+                            <br><br>
+                            This religious event, celebrated every 15th of May, honors Patron Saint Isidore for his blessings 
+                            of abundant harvests upon the people of Calamba. Concurrently, schools hold homecoming activities, 
+                            welcoming visitors from distant places back home to reconnect with family and friends. Additionally, 
+                            the eagerly anticipated coronation for Ms. Calamba Tourism engages the youth in promoting the city&#39;s tourist 
+                            attractions to non-locals, adding vibrancy to the festivities.
+                        </p>
+                    </div>
+                </div>
+                <div class="side-panel">
+                    <div class="content-wrapper">
+                        <p>Contents:</p>
+                        <div class="content-cont">
+                            <a href="#Buhayani" class="content buhayani"><p>Buhayani</p></a>
+                            <a href="#PatronSaintIsidore" class="content patron"><p>Patron</p></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
